--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
             "email": "matheus.marabesi@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+	"autoload" : {
+		"psr-4": {
+			"Marabesi\\": "src"
+		}	
+	}
 }
