--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require": {
         "php": ">=7.0",
         "illuminate/support": "5.5.*",
+        "illuminate/console": "5.5.*"
     },
 	"autoload" : {
 		"psr-4": {
