Add a ServiceProvider with package-discovery for easier use of Laration

--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,16 @@
         }
     ],
     "require": {},
-	"autoload" : {
+    "autoload" : {
 		"psr-4": {
 			"Marabesi\\": "src"
-		}	
-	}
+		}
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Marabesi\\ServiceProvider"
+            ]
+        }
+    }
 }
