--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     ],    
     "require": {
         "php": ">=7.0",
-        "illuminate/support": "5.5.*",
-        "illuminate/console": "5.5.*"
+        "illuminate/support": "~5.0",
+        "illuminate/console": "~5.0"
     },
     "autoload" : {
         "psr-4": {
@@ -33,6 +33,5 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "dev",
     "prefer-stable": true
 }
