--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],    
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.1",
         "illuminate/support": "~5.0",
         "illuminate/console": "~5.0"
     },
@@ -34,5 +34,8 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require-dev": {
+        "orchestra/testbench": "~3.0"
+    }
 }
