--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,13 @@ os:
 matrix:
   allow_failures:
     - os: osx
+    - php: 7.4snapshot
 
 php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4snapshot
 
 before_script:
   - chmod 777 test.sh
