--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     ],    
     "require": {
         "php": ">=7.1",
-        "illuminate/support": "~5.0|~6.0",
-        "illuminate/console": "~5.0|~6.0"
+        "illuminate/support": ">=5.0",
+        "illuminate/console": ">=5.0"
     },
     "autoload" : {
         "psr-4": {
